--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc mocha"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "mocha": "^9.0.2",
+    "nyc": "^15.1.0",
     "sinon": "^11.1.1"
   }
 }
