--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
+    "mongoose": "^5.13.2",
     "node-cron": "^3.0.0",
     "pg": "^8.6.0"
   },
